k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ngx-blog
  labels:
    name: ngx-blog
    app: ngx-blog
